--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.13.RELEASE'
     id 'name.remal.check-updates' version '1.5.0'
     id "de.undercouch.download" version "4.1.2"
+    id "com.diffplug.spotless" version "6.18.0"
 }
 
 group 'fr.ynov.eval'
@@ -26,8 +27,23 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-ui:1.6.11'
     runtimeOnly 'com.h2database:h2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation group: 'com.diffplug.spotless', name: 'spotless-plugin-gradle', version: '6.18.0'
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+spotless {
+    java {
+        target fileTree('.') {
+            include '**/*.java'
+            exclude '**/build/**', '**/build-*/**'
+        }
+        toggleOffOn()
+        palantirJavaFormat()
+        removeUnusedImports()
+        trimTrailingWhitespace()
+        endWithNewline()
+    }
 }
